Fixed alignment
Fixed alignment to the right of navigation and Fixed misalignment of the thumbnails on smaller view

--- a/www/sites/all/themes/immoklink_base/css/news.css
+++ b/www/sites/all/themes/immoklink_base/css/news.css
@@ -143,29 +143,37 @@ h2 { font-weight: 500; }
 }
 
 #gallery .image-landscape {
-  width: 32%;
+  width: 32.3%;
 }
 #gallery .image-portrait {
-  width: 15%;
+  width: 15.5%;
 }
 /*#index-7.image-landscape {
   width: 24%;
 }*/
 
+a.logo { padding: 15px 0 15px 10px !important; }
+
 @media screen and (min-width: 480px) and (max-width: 559px) {
   html { font-size: 62.5%; }
+  a.logo { font-size: 20px !important; }
+  nav a { font-size: 65% !important; }
   .page-gallery { max-width: 549px; }
   .page-index,
   .page-index img { height: 100px; }
 }
 @media screen and (min-width: 560px) and (max-width: 639px) {
   html { font-size: 80%; }
+  a.logo { font-size: 23px !important; }
+  nav a { font-size: 80% !important; }
   .page-gallery { max-width: 628px; }
   .page-index,
   .page-index img { height: 112px; }
 }
 @media screen and (min-width: 640px) and (max-width: 799px) {
   html { font-size: 90%; }
+  a.logo { font-size: 28px !important; }
+  nav a { font-size: 90% !important; }
   .page-gallery { max-width: 750px; }
   .page-index,
   .page-index img { height: 160px; }
